--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="email in randomEmails">{{randomEmails}}</li>
+            <li v-for="email in randomEmails">{{email}}</li>
         </ul>
     </div>
 
