add title change ul with ol

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div id="app">
-        <ul>
+        <h1>Here are your 10 random Emails:</h1>
+        <ol>
             <li v-for="email in randomEmails">{{email}}</li>
-        </ul>
+        </ol>
     </div>
 
     <!--Links to js file, vue cdn and axios cdn-->
